# iq_migrate

./: README.md
data_ingestion/: Ingest_foia_to_bronze_layer_Optimized_v1.yaml  Ingest_foia_to_bronze_layer_Optimized_v3.yaml  MANIFEST.in  README.md  databricks.yml  pyproject.toml  sample_databricks.yml  setup.py
data_ingestion/resources/: Ingest_foia_to_bronze_layer_Optimized.yaml  README.md  data_ingestion_job.job.yml  data_ingestion_pipeline.pipeline.yml  foia_etl_pipeline.yml  variables.yaml
data_ingestion/src/bronze_silver/: BRONZE_TO_SILVER_INGESTION.py  ETL_LOG_DDL_SILVER.py
data_ingestion/src/data_ingestion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data_ingestion/src/data_ingestion/bronze_silver/: BRONZE_TO_SILVER_INGESTION.py  ETL_LOG_DDL_SILVER.py  SILVER_LAYER_DDL.py
data_ingestion/src/data_ingestion/ddl/: BRONZE_LAYER_DDL.py  ETL_LOG_DDL_BRONZE.py
data_ingestion/src/data_ingestion/env/: environment_config.py  etl_utils.py
data_ingestion/src/data_ingestion/ingest_table/: INGEST_TABLE_DISPATCHER.py  wheel_entrypoints.py
data_ingestion/src/data_ingestion/notification/: EMAIL_NOTIFICATION.py
data_ingestion/src/ddl/: BRONZE_LAYER_DDL.py
data_ingestion/src/env/: environment_config.py
data_ingestion/src/ingest_table/: INGEST_TABLE_DISPATCHER.py  wheel_entrypoints.py
